--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "react-icons": "^5.4.0",
     "react-router-dom": "^7.1.3",
     "react-scripts": "5.0.1",
+    "react-slick": "^0.30.3",
     "sass": "^1.83.4",
+    "slick-carousel": "^1.8.1",
     "swiper": "^11.2.1"
   },
   "scripts": {
